--- a/portfolio-designe-25/assets/css/style.css
+++ b/portfolio-designe-25/assets/css/style.css
@@ -11,9 +11,36 @@
   color: #FD6E0A;
 }
 
+.btn-primary {
+  color: rgb(255, 255, 255);
+  font-weight: 700;
+  line-height: 27px;
+  letter-spacing: 0%;
+  text-align: left;
+  border-radius: 5px;
+  background: rgb(253, 110, 10);
+  cursor: pointer;
+  padding: 12px 35px;
+  font-size: 20px;
+  border: 0;
+}
+
+
+.dark-2 {
+  color: #505050;
+}
+
 /* Nav Style */
 nav {
   display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin: 0px 200px;
+}
+
+nav ul {
+  display: flex;
+  align-items: center;
 }
 
 .nav-tiltle {
@@ -22,4 +49,39 @@ nav {
   line-height: 61px;
   letter-spacing: 0%;
   text-align: left;
+}
+
+nav ul li {
+  list-style: none;
+  margin-right: 50px;
+}
+
+nav ul li a {
+  text-decoration: none;
+}
+
+.banner {
+  display: flex;
+  justify-content: space-between;
+  margin: 0 35px 0 200px;
+}
+
+.banner-content {
+  max-width: 580px;
+}
+
+.banner-greetings {
+  color: rgb(71, 71, 71);
+  font-size: 45px;
+  font-weight: 600;
+  line-height: 61px;
+  letter-spacing: 0%;
+}
+
+.banner-title {
+  color: rgb(24, 24, 24);
+  font-size: 85px;
+  font-weight: 700;
+  line-height: 116px;
+  letter-spacing: 0%;
 }
