--- a/portfolio-designe-25/assets/css/style.css
+++ b/portfolio-designe-25/assets/css/style.css
@@ -7,8 +7,14 @@
   font-style: normal;
 }
 
+/* shared styele */
 .text-primary {
   color: #FD6E0A;
+}
+
+.secondary-bg {
+  border-radius: 10px;
+  background: rgb(255, 248, 243);
 }
 
 .btn-primary {
@@ -29,6 +35,33 @@
 .dark-2 {
   color: #505050;
 }
+
+.section-title {
+  color: rgb(24, 24, 24);
+  font-family: Open Sans;
+  font-size: 35px;
+  font-weight: 700;
+  line-height: 48px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+
+.section-description {
+  color: rgb(117, 117, 117);
+  font-family: Open Sans;
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 30px;
+  letter-spacing: 0%;
+  text-align: center;
+}
+
+.header {
+  background-image: url('../img/Developer.png'), url('../img/Group 12.png');
+  background-repeat: no-repeat;
+  background-position: top left, bottom right;
+}
+
 
 /* Nav Style */
 nav {
