portfolio designe skill section

--- a/portfolio-designe-25/assets/css/style.css
+++ b/portfolio-designe-25/assets/css/style.css
@@ -149,3 +149,14 @@ main {
 .item-description {
   font-weight: 600;
 }
+
+/* skills-container */
+
+.skills-container{
+  display: flex;
+  gap: 24px;
+}
+
+.skill{
+  padding: 30px;
+}
