--- a/portfolio-designe-25/assets/css/style.css
+++ b/portfolio-designe-25/assets/css/style.css
@@ -126,12 +126,17 @@ main {
   margin: 0 auto;
 }
 
+main section {
+  margin-top: 130px;
+  margin-bottom: 130px;
+}
+
 /* about section  style */
 .about {
   border-radius: 10px;
   padding: 130px 150px;
   text-align: center;
-  margin-top: 130px;
+
 }
 
 /* about items */
@@ -152,11 +157,51 @@ main {
 
 /* skills-container */
 
-.skills-container{
+.skills-container {
   display: flex;
   gap: 24px;
 }
 
-.skill{
+.skill {
   padding: 30px;
+  border-radius: 5px;
+  box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+
+/* resume-container */
+
+.resume-container {
+  display: flex;
+  gap: 24px;
+}
+
+.resume-column-title {
+  font-weight: 600;
+  margin-bottom: 5%;
+}
+
+.expreiance-title {
+  font-weight: 600;
+
+}
+
+.exprieance-sub-title {
+  font-size: 20px;
+  font-weight: 600;
+  margin-bottom: 20px;
+}
+
+.experiance-descripiton,
+.exprieance-sub-title {
+  color: #757575;
+}
+
+.experiance-descripiton {}
+
+.resume hr{
+margin-right: 30px 5px;
+}
+.cv-download-button{
+  text-align: center;
+  margin-top: 30px;
 }
